--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./index.css">
+  <title>Namastey Javascript</title>
 </head>
 
 <body>
-
+  <div id="root">
+    <span>jay</span>
+  </div>
+  <script type="module" src="./src/App.js"></script>
 </body>
 
 </html>
